refactor(26.3): Migrate research out of the recipe system to its own dynamic registry